--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                         <div class="text-2xl font-extrabold drop-shadow text-white mt-2">
                             ${toPersianNumber(Math.floor(result).toLocaleString())}
                         </div>
+                         <small id="(ayar.pc / 10)" class="block mt-1 text-base text-white persian-numbers drop-shadow">...</small>
                    `);
              } else {
                        animateElement("profit-box", "صندوق عیار یافت نشد");
