--- a/index.html
+++ b/index.html
@@ -130,7 +130,11 @@
                         <div class="text-2xl font-extrabold drop-shadow text-white mt-2">
                             ${toPersianNumber(Math.floor(result).toLocaleString())}
                         </div>
-                        <small class="block mt-1 text-base text-white persian-numbers drop-shadow">(ayar.pc / 10)</small>
+                        <small id="pcDisplay" class="block mt-1 text-base text-white persian-numbers drop-shadow"></small>
+                        <script>
+                            let ayar = ayar.pc / 10 ;
+                            document.getElementById('pcDisplay').textContent = ayar;
+                        </script>
                    `);
              } else {
                        animateElement("profit-box", "صندوق عیار یافت نشد");
