--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                         </div>
                         <small id="pcDisplay" class="block mt-1 text-base text-white persian-numbers drop-shadow"></small>
                         <script>
-                            let ayar = ayar.pc / 10 ;
-                            document.getElementById('pcDisplay').textContent = ayar;
+                            let ayary = ayar.pc / 10 ;
+                            document.getElementById('pcDisplay').textContent = ayary;
                         </script>
                    `);
              } else {
