--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
                         <div class="text-2xl font-extrabold drop-shadow text-white mt-2">
                             ${toPersianNumber(Math.floor(result).toLocaleString())}
                         </div>
-                        <small id="pcDisplay" class="block mt-1 text-base text-white persian-numbers drop-shadow"></small>
-                        
+                        <small class="block mt-1 text-base text-white persian-numbers drop-shadow">
+                          قیمت پایانی عیار: ${toPersianNumber(ayar.pc.toLocaleString())}          
+                        </small>
                    `);
              } else {
                        animateElement("profit-box", "صندوق عیار یافت نشد");
