--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             ${toPersianNumber(Math.floor(result).toLocaleString())}
                         </div>
                         <small class="block mt-1 text-base text-white persian-numbers drop-shadow">
-                          قیمت پایانی عیار: ${toPersianNumber(ayar.pc.toLocaleString())}          
+                          ${toPersianNumber((ayar.pc.toLocaleString()) / 10)}          
                         </small>
                    `);
              } else {
