--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                             ${toPersianNumber(Math.floor(result).toLocaleString())}
                         </div>
                         <small class="block mt-1 text-base text-white persian-numbers drop-shadow">
-  قیمت پایانی: ${toPersianNumber(Number(ayar.pc).toLocaleString())} 
-                         </small>
+  قیمت پایانی: ${toPersianNumber(Number(ayar.pc).toLocaleString())} تومان (${toPersianNumber(Number(ayar.zd).toFixed(2))}%)
+                        </small>
                    `);
              } else {
                        animateElement("profit-box", "صندوق عیار یافت نشد");
