--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       const gold18 = items.find(i => i.symbol === "IR_GOLD_18K");
 
       const usd = data.currency.find(i => i.symbol === "USD");
-      const xauusd = data.currency.find(i => i.symbol === "Gold");
+      const xauusd = data.currency.find(i => i.symbol === "XAUUSD");
 
       if (usd) {
         const usdColor = getColorClass(usd.change_percent);
