--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <span id="usd-info">دلار: ...</span> | <span id="xauusd-info">انس: ...</span>
     </div>
   </header>
-
+  <div id="xauusd-info" class="text-sm font-bold persian-numbers mt-2"></div>
   <main class="max-w-xl mx-auto p-4 space-y-4">
     
      <section id="gold-box" class="bg-gradient-to-br from-yellow-800 to-yellow-400 rounded-xl shadow-md p-6 text-center">
